fix font size on contact.html and spacing issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -496,13 +496,13 @@ footer {
 #address-heading {
     color: #b3d0d9;
     position: relative;
-    left: 3vw;
-    top: 3vw;
+    left: 5vw;
+    top: 1vw;
     text-align: center;
     margin-top: 5vw;
-    font-size: 3vw;
-    width: 37vw;
-    height: 8vw;
+    font-size: 5vw;
+    width: 50vw;
+    height: 13vw;
     background-color: rgba(107, 107, 184, 0.662);
     padding: 0.5%;
     border-radius: 1vw;
@@ -511,79 +511,68 @@ footer {
 #address{
     color: #b3d0d9;
     position: relative;
-    left: 1.5vw;
-    top: 3vw;
+    left: 5vw;
+    top: 1vw;
     margin-top: 5vw;
-    font-size: 2vw;
-    width: 20vw;
+    font-size: 4vw;
+    width: 40vw;
     height: 8vw;
-    background-color: rgba(107, 107, 184, 0.662);
 }
 
 #contact-info{
     color: #b3d0d9;
     position: relative;
-    left: 23vw;
-    bottom: 22vw;
+    left: 55vw;
+    bottom: 44vw;
     margin-top: 5vw;
-    font-size: 2vw;
-    width: 20vw;
+    font-size: 4vw;
+    width: 40vw;
     height: 8vw;
-    background-color: rgba(107, 107, 184, 0.662);
 }
 
 #email-table{
     color: #b3d0d9;
     position: relative;
-    left: 1.5vw;
-    bottom: 25vw;
+    left: 15vw;
+    bottom: 45vw;
     margin-top: 5vw;
-    font-size: 2vw;
-    width: 41.5vw;
+    font-size: 4vw;
+    width: 8vw;
     height: 8vw;
+}
+
+#info-box{
     background-color: rgba(107, 107, 184, 0.662);
-}
-
-#gmap_canvas {
-    width: 53vw;
-    height: 33vw;
-    position: relative;
-    left: 45vw;
-    bottom: 63vw;
-    border-radius: 1vw;
-}
-
-.gmap_canvas {
-    height: 0vw;
-}
-
-#section32 {
-    height: 40vw;
-}
-
-#way-in {
-    width: 41vw;
-    position: relative;
-    left: 2vw;
-    top: 10vw;
-    border-radius: 1vw;
+    height: 60vw;
+    width: 100vw;
 }
 
 #contact-us-form {
     font-family: 'Nanum Gothic', sans-serif;
     color: #b3d0d9;
     margin-top: 5vw;
-    font-size: 2vw;
-    width: 53vw;
-    text-align: right;
-    height: 20vw;
+    font-size: 4vw;
+    width: 100vw;
+    height: 50vw;
     background-color: rgba(107, 107, 184, 0.662);
     padding: 1%;
     position: relative;
-    left: 45vw;
-    bottom: 15vw;
-    border-radius: 1vw;
     list-style-type: none;
+}
+
+#map{
+    position: relative;
+    width: 100vw;
+    height: 40vw;
+    border-radius: 1vw;
+    top: 3vw;
+}
+
+#way-in {
+    width: 41vw;
+    position: relative;
+    left: 56vw;
+    border-radius: 1vw;
 }
 
 /* gallery page */
